3rd commit origin master

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="com.hiappz.firebasepushnotificationlib">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -45,6 +45,23 @@
             android:name="com.hiappz.firebasepushnotificationlib.default_notification_color"
             android:resource="@color/colorAccent" />
 
+
+        <receiver android:name=".receivers.AppDataClearReceiver"
+            android:exported="false">
+
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_DATA_CLEARED"/>
+            </intent-filter>
+        </receiver>
+
+
+        <receiver android:name=".receivers.AppUninstallReceiver"
+            android:exported="false">
+
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_REMOVED"/>
+            </intent-filter>
+        </receiver>
 
       <!--  <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
